force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt.object-meta.xml
<CustomObject>
    <description>Assignment of custom tender types to predefined tender types.</description>
    <label>Gift Processing Tender Type</label>
    <pluralLabel>Gift Processing Tender Types</pluralLabel>
</CustomObject>