force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Enable_for_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_for_External_Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow ability to send transactions to external payment gateway.</description>
    <inlineHelpText>Allow ability to send transactions to external payment gateway.</inlineHelpText>
    <label>Enable for External Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>