force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Exclude_From_Lifetime_Cash__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Exclude_From_Lifetime_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will exclude this tender type from being added to lifetime cash totals.</description>
    <inlineHelpText>Checking this box will exclude this tender type from being added to lifetime cash totals.</inlineHelpText>
    <label>Exclude From Lifetime Cash</label>
    <type>Checkbox</type>
</CustomField>