force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Short_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Short_Text__c</fullName>
    <description>Short Text of Tender Type.</description>
    <inlineHelpText>Short Text of Tender Type.</inlineHelpText>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>